kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: besu-service
  labels:
    app: besu
spec:
  type: ClusterIP
  ports:
  - name: rpc-http
    port: 8545
    targetPort: 8545
  - name: rpc-ws
    port: 8546
    targetPort: 8546
  - name: metrics
    port: 9545
    targetPort: 9545
  selector:
    app: besu
